--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,13 +12,13 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@4
       - name: create .env file
-        uses: echo "PORT=${{ secrets.PORT }}"
+        run: echo "PORT=${{ secrets.PORT }}" >> .env
       - name: Login to Docker hub
-        uses : docker login -u ${{ secrets.DOCKER_USERNAME }} -- ${{ secrets.DOCKER_PASSWORD }}
+        run : docker login -u ${{ secrets.DOCKER_USERNAME }} -- ${{ secrets.DOCKER_PASSWORD }}
       - name: Build docker image
-        uses: docker build -t kautsarhasby/messaging-app:latest .
+        run: docker build -t kautsarhasby/messaging-app:latest .
       - name: Push docker image to docker hub
-        uses: docker push kautsarhasby/messaging-app:latest
+        run: docker push kautsarhasby/messaging-app:latest
   deploy:
     needs: build
     runs-on: self-hosted
