fix: cicd workflows actions/checkout version

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
       - name: create .env file
         run: echo "PORT=${{ secrets.PORT }}" >> .env
       - name: Login to Docker hub
