--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,7 +14,7 @@ jobs:
       - name: create .env file
         run: echo "PORT=${{ secrets.PORT }}" >> .env
       - name: Login to Docker hub
-        run : docker login -u ${{ secrets.DOCKER_USERNAME }} -- ${{ secrets.DOCKER_PASSWORD }}
+        run : docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build docker image
         run: docker build -t kautsarhasby/messaging-app:latest .
       - name: Push docker image to docker hub
