--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,4 +28,18 @@ jobs:
       - name: Delete old docker container
         run: docker rm -f messaging-app
       - name: Running new docker container
-        run: docker run -d -p 8080:8080 -p 4000:4000 --name messaging-app kautsarhasby/messaging-app
+        run: docker run -d \
+            -p 8080:8080 -p 4000:4000 \
+            --name messaging-app \
+            -e DB_HOST=${{ secrets.DB_HOST }} \
+            -e DB_PORT=${{ secrets.DB_PORT }} \
+            -e DB_NAME=${{ secrets.DB_NAME }} \
+            -e DB_USER=${{ secrets.DB_USER }} \
+            -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+            -e APP_HOST=${{ secrets.APP_HOST }} \
+            -e APP_PORT_SOCKET=${{ secrets.APP_PORT_SOCKET }} \
+            -e APP_PORT=${{ secrets.APP_PORT }} \
+            -e APP_NAME="${{ secrets.APP_NAME }}" \
+            -e APP_SECRET=${{ secrets.APP_SECRET }} \
+            -e MONGODB_URI=${{ secrets.MONGODB_URI }} \
+            kautsarhasby/messaging-app:latest
