--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,10 +11,8 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
-      - name: create .env file
-        run: echo "PORT=${{ secrets.PORT }}" >> .env
       - name: Login to Docker hub
-        run : docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run : echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Build docker image
         run: docker build -t kautsarhasby/messaging-app:latest .
       - name: Push docker image to docker hub
@@ -26,7 +24,7 @@ jobs:
       - name: Pull docker image
         run: docker pull kautsarhasby/messaging-app:latest
       - name: Delete old docker container
-        run: docker rm -f messaging-app
+        run: docker rm -f messaging-app || true
       - name: Running new docker container
         run: |
           docker run -d \
